<resources>
    <string name="app_name">TriangleAppDeluxe</string>
    <string name="tab_text_1">Triangle</string>
    <string name="tab_text_2">History</string>
    <string name="action_about">About</string>

    <string name="triangle_a_side">A</string>
    <string name="triangle_b_side">B</string>
    <string name="triangle_c_side">C</string>
    <string name="triangle_area">Area</string>
    <string name="triangle_button">Go</string>
    <string name="triangle_error">No zeroes plz :(</string>
    <string name="triangle_image">Triangle Image Pro</string>
</resources>
